디자인 수정

--- a/synergyZone/src/main/resources/static/css/style.css
+++ b/synergyZone/src/main/resources/static/css/style.css
@@ -8272,10 +8272,7 @@ a[data-toggle="collapse"] {
 #content {
   width: 100%;
   padding: 0;
-  min-height: 100vh;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s; }
+  }
 
 .btn.btn-primary {
   background: #f8b739;
